--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <header>
     <h1>Meet Our Team</h1>
     <!-- Example team logo -->
+    <title>Discord Alliance</title>
     <img src="img/team-logo.png" alt="Team Logo" class="team-logo">
+    <h1>Discord Alliance</h1>
 
     <!-- Navigation menu to switch between sections -->
     <nav>
@@ -41,12 +43,30 @@
         <button onclick="toggleBio('bio3')">Show Bio</button>
         <p id="bio3" class="bio">Emily is a UI/UX designer with a passion for creating user-friendly interfaces.</p>
     </div>
+        <div class="card">
+        <h2>Tuan Sang</h2>
+        <p>Junior Developer</p>
+            <div id="bio4" class="bio">
+                <img src="/img/sang.jpg" alt="Sang's Profile Picture">
+                <p>Sang is a passionate Junior Developer at this Company</p>
+                <br>
+                <p>Sang is procient in Python, Web Development (HTML, CSS, JavaSCript) and when he's not in his room,
+                You can find him on the volleyball court!</p>
+                <img src="/img/volleyball.webp" alt="Volleyball">
+                <br>
+                <a href="https://github.com/tualsang">GitHub Profile</a>
+                <a href="https://www.linkedin.com/in/tualsang/">LinkedIn Profile</a>
+            </div>
+        <button onclick="toggleBio('bio4')">Show Bio</button>
+    </div>
 </div>
 
 <!-- Team vision/mission statement section (hidden by default) -->
 <div id="vision" class="container" style="display: none;">
     <h2>Our Mission Statement</h2>
     <p>We strive to create a collaborative, inclusive, and innovative environment where team members feel empowered to push boundaries and achieve excellence in their craft. Our mission is to deliver high-quality solutions that meet and exceed our clients' expectations.</p>
+    <h2>Our Vision Statement</h2>
+    <p>We continuously working for the betterment of society and our customers.</p>
 </div>
 
 <script src="script.js"></script> <!-- Link to external JavaScript file -->
