--- a/index.html
+++ b/index.html
@@ -24,22 +24,29 @@
 <div id="bios" class="container">
     <!-- Each card represents an individual team member -->
     <div class="card">
-        <h2>John Doe</h2>
+        <img src="img/Adrian_Professional_Photo.jpg" alt="Adrian" style="width:100px;height:110px;">
+        <h2>Adrian Castillo-Navarro</h2>
         <p>Frontend Developer</p>
         <button onclick="toggleBio('bio1')">Show Bio</button>
-        <p id="bio1" class="bio">John is a skilled frontend developer with 5 years of experience in creating responsive web applications.</p>
+        <p id="bio1" class="bio">Adrian is a skilled frontend developer with 5 years of experience in working with Python, Java, and C++. </p>
     </div>
     <div class="card">
-        <h2>Jane Smith</h2>
+        <h2>Anthony Guerrero</h2>
         <p>Backend Developer</p>
         <button onclick="toggleBio('bio2')">Show Bio</button>
         <p id="bio2" class="bio">Jane is a backend developer specializing in server-side logic and database management.</p>
     </div>
     <div class="card">
-        <h2>Emily Johnson</h2>
+        <h2>Richard Gutknecht</h2>
         <p>UI/UX Designer</p>
         <button onclick="toggleBio('bio3')">Show Bio</button>
         <p id="bio3" class="bio">Emily is a UI/UX designer with a passion for creating user-friendly interfaces.</p>
+    </div>
+    <div class="card">
+        <h2>Sang Sang</h2>
+        <p>UI/UX Designer</p>
+        <button onclick="toggleBio('bio4')">Show Bio</button>
+        <p id="bio4" class="bio">Emily is a UI/UX designer with a passion for creating user-friendly interfaces.</p>
     </div>
 </div>
 
