--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h2>Adrian Castillo-Navarro</h2>
         <p>Frontend Developer</p>
         <button onclick="toggleBio('bio1')">Show Bio</button>
-        <p id="bio1" class="bio">Adrian is a skilled frontend developer with 5 years of experience in working with Python, Java, and C++. </p>
+        <p id="bio1" class="bio">Adrian is a skilled frontend developer with 5 years of experience in working with Python, Java, and C++</p>
     </div>
     <div class="card">
         <h2>Anthony Guerrero</h2>
