--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <header>
     <h1>Meet Our Team</h1>
     <!-- Example team logo -->
+    <title>Discord Alliance</title>
     <img src="img/team-logo.png" alt="Team Logo" class="team-logo">
+    <h1>Discord Alliance</h1>
 
     <!-- Navigation menu to switch between sections -->
     <nav>
