--- a/index.html
+++ b/index.html
@@ -44,11 +44,22 @@
         <button onclick="toggleBio('bio3')">Show Bio</button>
         <p id="bio3" class="bio">Emily is a UI/UX designer with a passion for creating user-friendly interfaces.</p>
     </div>
-    <div class="card">
-        <h2>Sang Sang</h2>
-        <p>UI/UX Designer</p>
+    </div>
+        <div class="card">
+        <h2>Tuan Sang</h2>
+        <p>Junior Developer</p>
+            <div id="bio4" class="bio">
+                <img src="/img/sang.jpg" alt="Sang's Profile Picture">
+                <p>Sang is a passionate Junior Developer at this Company</p>
+                <br>
+                <p>Sang is procient in Python, Web Development (HTML, CSS, JavaSCript) and when he's not in his room,
+                You can find him on the volleyball court!</p>
+                <img src="/img/volleyball.webp" alt="Volleyball">
+                <br>
+                <a href="https://github.com/tualsang">GitHub Profile</a>
+                <a href="https://www.linkedin.com/in/tualsang/">LinkedIn Profile</a>
+            </div>
         <button onclick="toggleBio('bio4')">Show Bio</button>
-        <p id="bio4" class="bio">Emily is a UI/UX designer with a passion for creating user-friendly interfaces.</p>
     </div>
 </div>
 
