--- a/index.html
+++ b/index.html
@@ -36,17 +36,31 @@
         <p id="bio2" class="bio">Jane is a backend developer specializing in server-side logic and database management.</p>
     </div>
     <div class="card">
-        <h2>Emily Johnson</h2>
+        <h2>Richard Gutknecht</h2>
         <p>UI/UX Designer</p>
         <button onclick="toggleBio('bio3')">Show Bio</button>
-        <p id="bio3" class="bio">Emily is a UI/UX designer with a passion for creating user-friendly interfaces.</p>
+        <p id="bio3" class="bio">Richard is a UI/UX Designer who specializes in niche problem-solving in object-oriented programming.</p>
+        <img src="img/Richard.png" alt="Richard" style="width:100px;height:110px;">
+        <br>
+        <h2>Mood Board</h2>
+        <p>I love creating new and challenging projects within Java.</p>
+        <p>My favorite coding language is C.</p>
+        <a href="https://www.linkedin.com/in/graham-gutknecht-700a31251/">LinkedIn</a>
+        <a href="https://github.com/rgutknec4949/">GitHub</a>
     </div>
 </div>
 
 <!-- Team vision/mission statement section (hidden by default) -->
 <div id="vision" class="container" style="display: none;">
     <h2>Our Mission Statement</h2>
-    <p>We strive to create a collaborative, inclusive, and innovative environment where team members feel empowered to push boundaries and achieve excellence in their craft. Our mission is to deliver high-quality solutions that meet and exceed our clients' expectations.</p>
+    <p>As a team we strive to be known as honest, hardworking, and reliable computer scientists. We will work together through any conflict in a professional manner and lean on each other in times of need in order to achieve whatever goal is set before us.</p>
+    <br>
+    <h2>Team Rules</h2>
+    <p>* Commitment: 2/3 hours per week to developing the application.</p>
+    <p>* Courage: Not afraid to take risks in new features, or taking a different route.</p>
+    <p>* Focus: Priorities task during the work hour, and avoid distraction.</p>
+    <p>* Openness: Clear communication, not being harsh, being direct the team, maintain transparency.</p>
+    <p>* Respect: Respect team member's time by going meeting on time, and respecting each other's contributions and ideas.</p>
 </div>
 
 <script src="script.js"></script> <!-- Link to external JavaScript file -->
