--- a/index.html
+++ b/index.html
@@ -42,7 +42,14 @@
         <h2>Richard Gutknecht</h2>
         <p>UI/UX Designer</p>
         <button onclick="toggleBio('bio3')">Show Bio</button>
-        <p id="bio3" class="bio">Emily is a UI/UX designer with a passion for creating user-friendly interfaces.</p>
+        <p id="bio3" class="bio">Richard is a UI/UX Designer who specializes in niche problem-solving in object-oriented programming.</p>
+        <img src="img/Richard.png" alt="Richard" style="width:100px;height:110px;">
+        <br>
+        <h2>Mood Board</h2>
+        <p>I love creating new and challenging projects within Java.</p>
+        <p>My favorite coding language is C.</p>
+        <a href="https://www.linkedin.com/in/graham-gutknecht-700a31251/">LinkedIn</a>
+        <a href="https://github.com/rgutknec4949/">GitHub</a>
     </div>
     </div>
         <div class="card">
