--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
         <h2>Adrian Castillo-Navarro</h2>
         <p>Frontend Developer</p>
         <button onclick="toggleBio('bio1')">Show Bio</button>
-        <p id="bio1" class="bio">Adrian is a skilled frontend developer with 5 years of experience in working with Python, Java, and C++</p>
+        <p id="bio1" class="bio">Adrian is a skilled frontend developer with 5 years of experience in working with Python, Java, and C++
+            <h2>Mood Board</h2>
+            <p>I'm interested in new things and what life brings me.</p>
+            <p>I can speak both English and Spanish proficiently.</p>
+            <a href="https://www.linkedin.com/in/adrian-castillo-navarro/">LinkedIn</a>
+            <a href="https://github.com/ACastillo5">GitHub</a>
+        </p>
     </div>
     <div class="card">
         <h2>Anthony Guerrero</h2>
@@ -51,29 +57,33 @@
         <a href="https://www.linkedin.com/in/graham-gutknecht-700a31251/">LinkedIn</a>
         <a href="https://github.com/rgutknec4949/">GitHub</a>
     </div>
-    </div>
         <div class="card">
-        <h2>Tuan Sang</h2>
-        <p>Junior Developer</p>
-            <div id="bio4" class="bio">
-                <img src="/img/sang.jpg" alt="Sang's Profile Picture">
-                <p>Sang is a passionate Junior Developer at this Company</p>
-                <br>
-                <p>Sang is procient in Python, Web Development (HTML, CSS, JavaSCript) and when he's not in his room,
-                You can find him on the volleyball court!</p>
-                <img src="/img/volleyball.webp" alt="Volleyball">
+            <img src="img/sang.jpg" alt="Sang's Profile Picture" style="width:100px;height:110px;">
+            <h2>Tuan Sang</h2>
+            <p>Junior Developer</p>
+            <button onclick="toggleBio('bio4')">Show Bio</button>
+            <p id="bio4" class="bio">
+                Sang is a passionate Junior Developer at this Company. He is proficient in Python, Web Development (HTML, CSS, JavaScript), and when he's not coding, you can find him on the volleyball court!
+                <img src="img/volleyball.webp" alt="Volleyball" style="width:100px;height:110px;">
                 <br>
                 <a href="https://github.com/tualsang">GitHub Profile</a>
                 <a href="https://www.linkedin.com/in/tualsang/">LinkedIn Profile</a>
-            </div>
-        <button onclick="toggleBio('bio4')">Show Bio</button>
-    </div>
+            </p>
+        </div>
 </div>
+
 
 <!-- Team vision/mission statement section (hidden by default) -->
 <div id="vision" class="container" style="display: none;">
     <h2>Our Mission Statement</h2>
-    <p>We strive to create a collaborative, inclusive, and innovative environment where team members feel empowered to push boundaries and achieve excellence in their craft. Our mission is to deliver high-quality solutions that meet and exceed our clients' expectations.</p>
+    <p>As a team we strive to be known as honest, hardworking, and reliable computer scientists. We will work together through any conflict in a professional manner and lean on each other in times of need in order to achieve whatever goal is set before us.</p>
+    <br>
+    <h2>Team Rules</h2>
+    <p>* Commitment: 2/3 hours per week to developing the application.</p>
+    <p>* Courage: Not afraid to take risks in new features, or taking a different route.</p>
+    <p>* Focus: Priorities task during the work hour, and avoid distraction.</p>
+    <p>* Openness: Clear communication, not being harsh, being direct the team, maintain transparency.</p>
+    <p>* Respect: Respect team member's time by going meeting on time, and respecting each other's contributions and ideas.</p>
 </div>
 
 <script src="script.js"></script> <!-- Link to external JavaScript file -->
