Updated Anthony's image and added moodboard section

--- a/index.html
+++ b/index.html
@@ -23,25 +23,24 @@
 <!-- Team bios section (default section) -->
 <div id="bios" class="container">
     <!-- Each card represents an individual team member -->
-    <div class="card">
-        <h2>John Doe</h2>
-        <p>Frontend Developer</p>
-        <button onclick="toggleBio('bio1')">Show Bio</button>
-        <p id="bio1" class="bio">John is a skilled frontend developer with 5 years of experience in creating responsive web applications.</p>
-    </div>
-    <div class="card">
-        <h2>Jane Smith</h2>
-        <p>Backend Developer</p>
-        <button onclick="toggleBio('bio2')">Show Bio</button>
-        <p id="bio2" class="bio">Jane is a backend developer specializing in server-side logic and database management.</p>
-    </div>
-    <div class="card">
-        <h2>Emily Johnson</h2>
-        <p>UI/UX Designer</p>
-        <button onclick="toggleBio('bio3')">Show Bio</button>
-        <p id="bio3" class="bio">Emily is a UI/UX designer with a passion for creating user-friendly interfaces.</p>
+
+<div class="card">
+    <h2>Anthony Guerrero</h2>
+    <img src="img/IMG_4608.jpeg" alt="Anthony Guerrero" class="member-photo"> <!-- Updated image source -->
+    <p>Backend Developer</p>
+    <button onclick="toggleBio('bio2')">Show Bio</button>
+    <p id="bio2" class="bio">Anthony is a backend developer specializing in server-side logic and database management.</p>
+</div>
+
+
+    <!-- Moodboard Section -->
+    <div class="moodboard">
+        <h3>Moodboard</h3>
+        <p>Check out my <a href="https://github.com/anthonyguerrero03" target="_blank">GitHub</a> for more projects!</p>
     </div>
 </div>
+
+
 
 <!-- Team vision/mission statement section (hidden by default) -->
 <div id="vision" class="container" style="display: none;">
